fix UI scroll on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,11 @@
 }
 
 .app-container {
+  max-height: 100%;
   max-width: 400px;
   margin: 0 auto;
   padding: 0 50px;
+  overflow-y: auto;
 }
 
 .user-name {
